# phylopytho

./: .gitignore  README.md  setup.cfg
phylopytho/: phylogeny.py  treeprune.py
phylopytho/data/: gene_trees.tre
tests/: test_paralogy_prune.py  test_treeprune.py
