[metadata]
name = phylopytho
version = 1.0.01
author = Casey Dunn
author_email = casey.dunn@yale.edu
description = Tools for phylogenetic analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dunnlab/phylopytho
project_urls =
    Bug Tracker = https://github.com/dunnlab/phylopytho/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

setup_requires =
    setuptools
    pytest

install_requires =
    dendropy

[options.packages.find]
where = .

[aliases]
test=pytest