[metadata]
name = phylopytho
version = 1.0.01
author = Casey Dunn
author_email = casey.dunn@yale.edu
description = Tools for phylogenetic analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dunnlab/phylopytho
project_urls =
    Bug Tracker = https://github.com/dunnlab/phylopytho/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.6

setup_requires =
    setuptools

install_requires =
    dendropy

[options.extras_require]
dev =
    pytest
    black == 21.7b0
    flake8 == 3.9.2
    pre-commit == 2.13.0

[options.package_data]
phylopytho = data/*.tre

[options.entry_points]
console_scripts =
    treeprune = phylopytho.treeprune:main

[options.packages.find]
where = .

[aliases]
test = pytest [test]
